--- a/themes/custom/premiumlayers/templates/layout/html.html.twig
+++ b/themes/custom/premiumlayers/templates/layout/html.html.twig
@@ -31,6 +31,7 @@
     <css-placeholder token="{{ placeholder_token|raw }}">
     <js-placeholder token="{{ placeholder_token|raw }}">
   </head>
+  {% include directory ~'/partials/header.html.twig' %}
   <body{{ attributes }}>
     <a href="#main-content" class="visually-hidden focusable">
       {{ 'Skip to main content'|t }}
@@ -38,6 +39,7 @@
     {{ page_top }}
     {{ page }}
     {{ page_bottom }}
+    {% include directory ~'/partials/footer.html.twig' %}
     <js-bottom-placeholder token="{{ placeholder_token|raw }}">
   </body>
 </html>
