--- a/themes/custom/premiumlayers/templates/layout/page.html.twig
+++ b/themes/custom/premiumlayers/templates/layout/page.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Theme override to display a single page.
+ * Default theme implementation to display a single page.
  *
  * The doctype, html, head and body tags are not in this template. Instead they
  * can be found in the html.html.twig template in this directory.
@@ -41,15 +41,17 @@
  *
  * @see template_preprocess_page()
  * @see html.html.twig
+ *
+ * @ingroup themeable
  */
 #}
+
+
+
 <div class="layout-container">
 
-  <header role="banner">
-    {{ page.header }}
-  </header>
 
-  {{ page.primary_menu }}
+
   {{ page.secondary_menu }}
 
   {{ page.breadcrumb }}
@@ -80,9 +82,8 @@
   </main>
 
   {% if page.footer %}
-    <footer role="contentinfo">
-      {{ page.footer }}
-    </footer>
+    {#% include directory ~'/partials/footer.html.twig' %#}
   {% endif %}
 
 </div>{# /.layout-container #}
+
