--- a/themes/custom/premiumlayers/templates/navigation/menu.html.twig
+++ b/themes/custom/premiumlayers/templates/navigation/menu.html.twig
@@ -35,7 +35,7 @@
       <ul>
     {% endif %}
     {% for item in items %}
-      <li{{ item.attributes }} class="nav_news_1">
+      <li{{ item.attributes }} class="nav_news">
         {{ link(item.title, item.url) }}
         {% if item.below %}
           {{ menus.menu_links(item.below, attributes, menu_level + 1) }}
