--- a/themes/custom/premiumlayers/partials/section.html.twig
+++ b/themes/custom/premiumlayers/partials/section.html.twig
@@ -6,30 +6,9 @@
                 <div class="hp_banner_box">
                     <div class="hp_banner_left">
                         {{ page.widget_1 }}
-                        <div class="bl_single_news"> <img src="themes/custom/premiumlayers/images/blt-banner2.jpg" alt="" />
-                            <div class="bl_single_text"> <a href="blog-single-slider-post.html">
-                                    <h4>What Do Need To Make a Business ?</h4>
-                                </a> <span><i class="fa fa-clock-o"></i> 4 hours ago</span> </div>
-                        </div>
-                        <div class="bl_single_news"> <img src="themes/custom/premiumlayers/images/bann2.jpg" alt="" />
-                            <div class="bl_single_text"> <a href="blog-single-slider-post.html">
-                                    <h4>The Ultimate Cheat Sheet On Ecology</h4>
-                                </a> <span><i class="fa fa-clock-o"></i> 5 hours ago</span> </div>
-                        </div>
                     </div>
                     <div class="hp_banner_right">
-                        <div class="br_single_news"> <img src="themes/custom/premiumlayers/images/brt-banner1.jpg" alt="" />
-                            <div class="br_single_text"> <span class="green_hp_span">Environment</span> <a href="blog-single-slider-post.html">
-                                    <h4>The Ultimate Cheat Sheet On Ecology</h4>
-                                </a> </div>
-                            <div class="br_cam"> <a href="index.html" class="fa fa-camera"></a> </div>
-                        </div>
-                        <div class="br_single_news"> <img src="themes/custom/premiumlayers/images/brt-banner2.jpg" alt="" />
-                            <div class="br_single_text"> <span class="blue_hp_span">Travel</span> <a href="blog-single-slider-post.html">
-                                    <h4>Notes from a vacation photographer</h4>
-                                </a> </div>
-                            <div class="br_cam"> <a href="index.html" class="fa fa-camera"></a> </div>
-                        </div>
+                        {{ page.widget_1_half }}
                     </div>
                 </div>
             </div>
