--- a/themes/custom/premiumlayers/sass/style.scss
+++ b/themes/custom/premiumlayers/sass/style.scss
@@ -736,6 +736,7 @@ position:relative;
 .rel_post_text {
   float: left;
   width: 71%;
+  color: #FFF;
 }
 .ft_contact p, .ft_connected > p, .ft_contact a, .rel_post_text > p, .ftm_newsletter > p {
   color: #999999;
